feat: added image uploader and connected it to aws s3
