# server/internal/routes/routes.go
@@ -1,14 +1,19 @@
 package routes
 
 import (
+	"log"
 	"net/http"
+	"time"
 
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	"github.com/puremike/online_auction_api/internal/config"
 	"github.com/puremike/online_auction_api/internal/handlers"
+	"github.com/puremike/online_auction_api/internal/imagesuploader"
 	"github.com/puremike/online_auction_api/internal/middlewares"
 	"github.com/puremike/online_auction_api/internal/services"
 	"github.com/puremike/online_auction_api/internal/ws"
+	"github.com/puremike/online_auction_api/pkg"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -16,6 +21,21 @@ import (
 func Routes(app *config.Application) http.Handler {
 
 	g := gin.Default()
+
+	g.Use(func(c *gin.Context) {
+		log.Printf("DEBUG: Incoming Request - Method: %s, Path: %s, From: %s",
+			c.Request.Method, c.Request.URL.Path, c.ClientIP())
+		c.Next()
+	})
+
+	g.Use(cors.New(cors.Config{
+		AllowOrigins:     []string{pkg.GetEnvString("FRONTEND_URL", "http://localhost:3000")},
+		AllowMethods:     []string{"PUT", "PATCH", "GET", "POST", "DELETE", "OPTIONS"},
+		AllowHeaders:     []string{"Accept", "Authorization", "Content-Type", "X-CSRF-Token"},
+		ExposeHeaders:    []string{"Content-Length"},
+		AllowCredentials: true,
+		MaxAge:           12 * time.Hour,
+	}))
 
 	userService := services.NewUserService(app.Store.Users, app)
 	userHandler := handlers.NewUserHandler(userService, app)
@@ -32,6 +52,9 @@ func Routes(app *config.Application) http.Handler {
 
 	paymentService := services.NewPaymentService(app.Stripe, app.Store.Payments)
 	webHookHandler := handlers.NewWebHookHander(paymentService, app.Store.Auctions)
+
+	imageService := imagesuploader.NewImageService(app.AppConfig.S3Bucket)
+	imageHandler := handlers.NewImageHandler(imageService)
 
 	api := g.Group("/api/v1")
 	api.Use(middleware.RateLimiterMiddleware(app.GeneralRateLimiter))
@@ -78,6 +101,8 @@ func Routes(app *config.Application) http.Handler {
 		authGroup.GET("/ws", wsHandler.ServeWs)
 
 		authGroup.POST("/auctions/:auctionID/create-checkout-session", middleware.AuctionMiddleware(), webHookHandler.CreateCheckoutSessionHandler)
+
+		authGroup.POST("/auctions/image_upload", imageHandler.UploadImage)
 	}
 
 	return g
